@@ -1,62 +1,71 @@
 package com.epam.microservice.service;
 
+import com.amazonaws.services.s3.model.AmazonS3Exception;
+import com.amazonaws.services.s3.model.S3Object;
 import com.epam.microservice.model.Resource;
 import com.epam.microservice.repository.ResourceRepository;
+import com.epam.microservice.service.dto.ResourceDTO;
 import com.epam.microservice.service.exceptions.EntityDuplicateException;
 import com.epam.microservice.service.exceptions.EntityNotFoundException;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
+import org.springframework.util.StringUtils;
 import org.springframework.web.multipart.MultipartFile;
 
-import java.io.ByteArrayOutputStream;
-import java.io.ObjectOutputStream;
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Service
 public class ResourceService {
 
-    private ResourceRepository resourceRepository;
+    private final ResourceRepository resourceRepository;
+    private final AwsS3Service awsS3Service;
 
     @Autowired
-    public ResourceService(ResourceRepository resourceRepository) {
+    public ResourceService(ResourceRepository resourceRepository, AwsS3Service awsS3Service) {
         this.resourceRepository = resourceRepository;
+        this.awsS3Service = awsS3Service;
     }
 
     @Transactional
-    public byte[] findById(Long id) {
-        Resource resource =
+    public ResourceDTO findById(Long id) {
+        var resource =
                 resourceRepository.findById(id).orElseThrow(() ->
                         new EntityNotFoundException(id));
-        //TODO: change logic with aws
 
-        // temporary
-        ByteArrayOutputStream bos = new ByteArrayOutputStream();
-        try {
-            ObjectOutputStream oos = new ObjectOutputStream(bos);
-            oos.writeObject(resource);
-            oos.flush();
-        } catch (Exception ex) {
-            //nothing
+        var fileName = resource.getFileName();
+
+        if (!StringUtils.hasLength(fileName)) {
+            throw new EntityNotFoundException("File name can't be null");
         }
-        // temporary
 
-        return bos.toByteArray();
+        S3Object awsResource;
+        try {
+            awsResource = awsS3Service.downloadResource(fileName);
+        } catch (AmazonS3Exception amazonS3Exception) {
+            throw new EntityNotFoundException("Can't find file " + fileName + " on AWS S3");
+        }
+
+        return new ResourceDTO(fileName,
+                awsResource.getObjectContent(),
+                awsResource.getObjectMetadata().getContentLength());
     }
 
     @Transactional
-    public Long save(MultipartFile file) {
+    public Long saveFile(MultipartFile file) {
         String fileName = file.getOriginalFilename();
+
         if (resourceRepository.existsByFileName(fileName)) {
             throw new EntityDuplicateException(fileName);
         }
+
+        awsS3Service.saveFile(file);
         Resource resource = resourceRepository.save(
                 new Resource(fileName,
                         Resource.ProcessingStatus.NONE));
-        //TODO: change logic with aws
-        /*String fileKey = awsS3Service.save(resource.getId(), file);
-        resource.setFileKey(fileKey);*/
         resourceRepository.save(resource);
+
         return resource.getId();
     }
 
@@ -68,7 +77,9 @@ public class ResourceService {
     @Transactional
     public Long[] delete(List<Long> ids) {
         List<Resource> resources = resourceRepository.deleteAllByIdIn(ids);
-        //awsS3Service.deleteByFileKeys(resources.stream().map(Resource::getFileKey).toList());
+        awsS3Service.deleteByFileKeys(resources.stream()
+                .map(Resource::getFileName)
+                .collect(Collectors.toList()));
         return resources.stream().map(Resource::getId).toArray(Long[]::new);
     }
 
